# am62d-audio-demo

./: .gitignore  LICENSE.txt  README.md  SETUP.md  arm.txt.example  meson.build  meson_options.txt
configs/: basic.json  demo.json  stt.json  yamnet_demo.json
demos/: am62d-term.c
docs/: structure.md  writing-style.md
docs/architecture/: core.md
docs/architecture/plugins/: downmix.md  passthrough.md  webrtc.md  yamnet.md
docs/how-to/: new-config.md  new-plugin.md
framework/core/: a53_node.c  a53_node.h  config.c  config.h  dataloop.c  dataloop.h  driver.c  driver.h  main.c  meson.build  param_bus.c  param_bus.h  pipeline.c  pipeline.h  plugin.c  plugin.h  publish.c  publish.h  registry.c  registry.h
framework/include/: am62d_plugin.h  am62d_spa.h
plugins/: am62d_params.h  downmix.c  downmix.ttl  manifest.ttl  passthrough.c  passthrough.ttl  spsc_queue.h  stt.c  stt.ttl  stt_dsp.h  stt_labels.h  webrtc.cpp  webrtc.ttl  yamnet.c  yamnet.ttl  yamnet_classes.h  yamnet_dsp.h
tests/: meson.build
tests/plugins/: meson.build  publish_stub.c  test_downmix.c  test_dsp.c  test_param_bus.c  test_spsc.c  test_stt_dsp.c  test_stt_tflite.c  test_webrtc_channels.cpp  test_yamnet_mock.c  test_yamnet_tflite.c
